--- a/Notice/HandGiveAll_v10.4
+++ b/Notice/HandGiveAll_v10.4
@@ -1,1 +1,2 @@
-@notice@§a플러그인의 새로운 업데이트가 나왔습니다.@notice@
+@notice@§6플러그인의 새로운 업데이트가 나왔습니다.@notice@
+@notice@§fhttps://horyu1234.com/HandGiveAll@notice@
