--- a/Notice/HandGiveAll_v10.5
+++ b/Notice/HandGiveAll_v10.5
@@ -1,1 +1,3 @@
-@notice@none@notice@
+@notice@§6메시지 오류가 1개 발견되어 해당 버전이 재배포되었습니다.@notice@
+@notice@§6공식 사이트 §ehttps://horyu1234.com/HandGiveAll/847 에서 받으실 수 있습니다.@notice@
+@notice@§6불편을 드려 죄송합니다.@notice@
