--- a/Notice/HandGiveAll_v10.5
+++ b/Notice/HandGiveAll_v10.5
@@ -1,3 +1,4 @@
-@notice@§6메시지 오류가 1개 발견되어 해당 버전이 재배포되었습니다.@notice@
+@notice@§c권한 오류 수정으로 해당 버전이 재배포되었습니다.@notice@
+@notice@§c재 패포일: 15.11.27@notice@
 @notice@§6공식 사이트 §ehttps://horyu1234.com/HandGiveAll/847 §6에서 받으실 수 있습니다.@notice@
-@notice@§6불편을 드려 죄송합니다.@notice@
+@notice@§4해당 날짜 이전에 받으신 분은 반드시 다시 받아주시기 바랍니다.@notice@
