--- a/Notice/HandGiveAll_v10.5
+++ b/Notice/HandGiveAll_v10.5
@@ -2,3 +2,6 @@
 @notice@§c재 패포일: 15.11.27@notice@
 @notice@§6공식 사이트 §ehttps://horyu1234.com/HandGiveAll/847 §6에서 받으실 수 있습니다.@notice@
 @notice@§4해당 날짜 이전에 받으신 분은 반드시 다시 받아주시기 바랍니다.@notice@
+@notice@§f@notice@
+@notice@§c새로 적용을 안하심에 대한 피해에 대하여 제작자는 책임지지 않습니다.@notice@
+@notice@§c본 공지는 약 일주일~이주일 후 제거됩니다.@notice@
