--- a/Notice/HandGiveAll_v10.5
+++ b/Notice/HandGiveAll_v10.5
@@ -1,4 +1,2 @@
-@notice@§f새로운 EULA 가 개정되었습니다. §bhttps://horyu1234.com/EULA@notice@
-@notice@§f이에 대한 이의가 있을 시 15일 이내로 §bhoryu1234@naver.com §f으로 이의 제기를 해주시기 바랍니다.@notice@
-@notice@§c플러그인 비활성화 확인 문제는 곧 10.6 버전을 배포할 예정입니다.@notice@
-@notice@§f감사합니다.@notice@
+@notice@§a최신 버전이 릴리즈 되었습니다.@notice@
+@notice@§ehttps://horyu1234.com/HandGiveAll/1135@notice@
